force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Active_Statuses__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Active_Statuses__c</fullName>
    <description>Sets the default active statuses on a project. Each value must be enclosed in single quotes. Additional values must be separated by a comma. If populated, only projects with statuses equals to one of the values are displayed on the Summary page, otherwise, all projects appear.</description>
    <inlineHelpText>Sets the default active statuses on a project. Each value must be enclosed in single quotes. Additional values must be separated by a comma. If populated, only projects with statuses equals to one of the values are displayed on the Summary page, otherwise</inlineHelpText>
    <label>Active Statuses</label>
    <type>TextArea</type>
</CustomField>