force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Allow_View_State_on_Gantt_Chart__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Allow_View_State_on_Gantt_Chart__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Allows for keeping track of collapsed settings in the gantt chart when going to print or refreshing the page.</inlineHelpText>
    <label>Allow View State on Gantt Chart</label>
    <type>Checkbox</type>
</CustomField>