force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Custom_Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Custom_Picklist_1__c</fullName>
    <description>Used to first custom picklist filter field on calendar object.</description>
    <inlineHelpText>Enter single field&#39;s API name on the project object. Field must be a picklist field.</inlineHelpText>
    <label>Custom Setting Picklist Filter #1</label>
    <type>TextArea</type>
</CustomField>