force-app/main/default/objects/MPM4_BASE__Milestone1_Settings__c/fields/MPM4_BASE__Default_Milestone_Alias__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Default_Milestone_Alias__c</fullName>
    <description>Default milestone for email to task.</description>
    <inlineHelpText>Insert a valid alias milestone by default to receive the mail about task&#39;s creation when a alias is not specified in the mail&#39;s subject. (Premium Edition Only)</inlineHelpText>
    <label>Default Milestone Alias</label>
    <length>30</length>
    <type>Text</type>
</CustomField>